force-app/main/default/objects/FinancialAccount__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>