force-app/main/default/objects/FinancialAccount__c/validationRules/NotEnoughBalance.validationRule-meta.xml
<ValidationRule>
    <fullName>NotEnoughBalance</fullName>
    <active>true</active>
    <errorConditionFormula>Balance_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Balance_Amount__c</errorDisplayField>
    <errorMessage>You don&apos;t have enough balance in your account to process this transaction.</errorMessage>
</ValidationRule>